<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="OFFsvs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="OFFgst">NO GST</string>
    <string name="ONgst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">ToggleButton</string>
    <string name="s">SPLIT</string>
    <string name="reset">ToggleButton</string>
    <string name="r">RESET</string>
    <string name="TotalBill"></string>
    <string name="eachPay"></string>
</resources>